<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>sl.testapp</groupId>
	<artifactId>jpatest</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>jpatest</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<id>jboss-enterprise-maven-repository</id>
			<name>JBoss Enterprise Maven Repository</name>
			<url>https://maven.repository.redhat.com/ga/</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-war-plugin</artifactId> 
				<version>3.3.1</version> <configuration> <archive> <manifest> <addClasspath>true</addClasspath> 
				<classpathPrefix>lib</classpathPrefix> </manifest> </archive> </configuration> 
				</plugin> -->
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>1.4.0.Final</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec</groupId>
			<artifactId>jboss-javaee-7.0</artifactId>
			<version>1.0.3.Final</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.protocol</groupId>
			<artifactId>arquillian-protocol-servlet</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- <dependency> <groupId>org.jboss.shrinkwrap.descriptors</groupId> <artifactId>shrinkwrap-descriptors-api-javaee</artifactId> 
			</dependency> -->
		<!-- <dependency> <groupId>org.jboss.shrinkwrap.descriptors</groupId> <artifactId>shrinkwrap-descriptors-impl-javaee</artifactId> 
			<scope>runtime</scope> </dependency> -->
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>2.1.16.RELEASE</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>jboss-remote</id>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.jboss.bom</groupId>
						<artifactId>jboss-eap-jakartaee8-with-tools</artifactId>
						<version>7.3.0.GA</version>
						<type>pom</type>
						<scope>import</scope>
					</dependency>
				</dependencies>
			</dependencyManagement>
			<dependencies>
				<dependency>
					<groupId>org.wildfly.arquillian</groupId>
					<artifactId>wildfly-arquillian-container-remote</artifactId>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>jakarta.validation</groupId>
					<artifactId>jakarta.validation-api</artifactId>
					<scope>provided</scope>
				</dependency>
			</dependencies>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
					</resource>
					<resource>
						<directory>src/main/resources-jboss</directory>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.0</version>
						<configuration>
							<systemPropertyVariables>
								<arquillian.launch>jboss-remote</arquillian.launch>
								<arquillian>jboss-remote</arquillian>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jboss-managed</id>
			<activation>
				<property>
					<name>arquillian</name>
					<value>jboss-managed</value>
				</property>
			</activation>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.jboss.bom</groupId>
						<artifactId>jboss-eap-jakartaee8-with-tools</artifactId>
						<version>7.3.0.GA</version>
						<type>pom</type>
						<scope>import</scope>
					</dependency>
				</dependencies>
			</dependencyManagement>
			<dependencies>
				<dependency>
					<groupId>org.wildfly.arquillian</groupId>
					<artifactId>wildfly-arquillian-container-managed</artifactId>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>jakarta.validation</groupId>
					<artifactId>jakarta.validation-api</artifactId>
					<scope>provided</scope>
				</dependency>
			</dependencies>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
					</resource>
					<resource>
						<directory>src/main/resources-jboss</directory>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.0</version>
						<configuration>
							<systemPropertyVariables>
								<arquillian.launch>jboss-managed</arquillian.launch>
								<arquillian>jboss-managed</arquillian>
							</systemPropertyVariables>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.jboss.eap</groupId>
											<artifactId>wildfly-dist</artifactId>
											<version>7.3.0.GA-redhat-00004</version>
											<type>zip</type>
											<overWrite>false</overWrite>
											<outputDirectory>${project.build.directory}</outputDirectory>
										</artifactItem>
									</artifactItems>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>wildfly-managed</id>
			<dependencies>
				<dependency>
					<groupId>org.wildfly.arquillian</groupId>
					<artifactId>wildfly-arquillian-container-managed</artifactId>
					<version>3.0.1.Final</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
					<version>6.0.18.Final</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>jakarta.validation</groupId>
					<artifactId>jakarta.validation-api</artifactId>
					<version>2.0.2</version>
					<scope>provided</scope>
				</dependency>

			</dependencies>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
					</resource>
					<resource>
						<directory>src/main/resources-jboss</directory>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.0</version>
						<configuration>
							<systemPropertyVariables>
								<arquillian.launch>wildfly-managed</arquillian.launch>
								<arquillian>wildfly-managed</arquillian>
							</systemPropertyVariables>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.wildfly</groupId>
											<artifactId>wildfly-dist</artifactId>
											<version>21.0.0.Final</version>
											<type>zip</type>
											<overWrite>false</overWrite>
											<outputDirectory>${project.build.directory}</outputDirectory>
										</artifactItem>
									</artifactItems>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>liberty-managed</id>
			<properties>
				<!-- Liberty configuration -->
				<liberty.var.default.http.port>9080</liberty.var.default.http.port>
				<liberty.var.default.https.port>9443</liberty.var.default.https.port>
			</properties>
			<dependencies>
				<!-- Provided dependencies -->
				<dependency>
					<groupId>jakarta.platform</groupId>
					<artifactId>jakarta.jakartaee-api</artifactId>
					<version>8.0.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.eclipse.microprofile</groupId>
					<artifactId>microprofile</artifactId>
					<version>3.3</version>
					<type>pom</type>
					<scope>provided</scope>
				</dependency>
				<!-- For tests -->
				<dependency>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
					<version>4.13.1</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-rs-client</artifactId>
					<version>3.1.11</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-rs-extension-providers</artifactId>
					<version>3.1.11</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.glassfish</groupId>
					<artifactId>javax.json</artifactId>
					<version>1.0.4</version>
					<scope>test</scope>
				</dependency>
				<!-- For JDK 9 & above Support -->
				<dependency>
					<groupId>javax.xml.bind</groupId>
					<artifactId>jaxb-api</artifactId>
					<version>2.2.11</version>
				</dependency>
				<dependency>
					<groupId>javax.activation</groupId>
					<artifactId>activation</artifactId>
					<version>1.1.1</version>
				</dependency>
				<!-- tag::arquillian-liberty-managed-junit[] -->
				<dependency>
					<groupId>io.openliberty.arquillian</groupId>
					<artifactId>arquillian-liberty-managed-junit</artifactId>
					<version>1.1.6</version>
					<type>pom</type>
					<scope>test</scope>
				</dependency>
				<!-- end::arquillian-liberty-managed-junit[] -->
				<!-- tag::shrinkwrap-api[] -->
				<dependency>
					<groupId>org.jboss.shrinkwrap</groupId>
					<artifactId>shrinkwrap-api</artifactId>
					<scope>test</scope>
				</dependency>
				<!-- end::shrinkwrap-api[] -->
				<dependency>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
					<version>6.0.18.Final</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>jakarta.validation</groupId>
					<artifactId>jakarta.validation-api</artifactId>
					<version>2.0.2</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>

			<build>
				<finalName>${project.artifactId}</finalName>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
					</resource>
					<resource>
						<directory>src/main/resources-liberty</directory>
					</resource>
				</resources>
				<plugins>
					<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-war-plugin</artifactId> 
						<version>3.2.3</version> <configuration> <packagingExcludes>pom.xml</packagingExcludes> 
						</configuration> </plugin> -->
					<!-- tag::maven-failsafe-plugin[] -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.2</version>
					</plugin>
					<!-- end::maven-failsafe-plugin[] -->
					<!-- tag::liberty-maven-plugin[] -->
					<plugin>
						<groupId>io.openliberty.tools</groupId>
						<artifactId>liberty-maven-plugin</artifactId>
						<version>3.2.3</version>
						<configuration>
							<arquillianProperties>
								<javaVmArguments>-Xmx512m -XX:MaxPermSize=128m
									-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n</javaVmArguments>
							</arquillianProperties>

						</configuration>
					</plugin>
					<!-- end::liberty-maven-plugin[] -->
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
